<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="OGX-6Y-L8G">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Works-->
        <scene sceneID="v07-fe-0Gh">
            <objects>
                <viewController id="joZ-dK-USJ" customClass="MyTextFieldViewController" customModule="XCTestTextFieldDemo" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="I1c-gs-f1m">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nickname" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Oh0-zd-dI9" userLabel="Nickname">
                                <rect key="frame" x="20" y="124.5" width="374" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="NicknameTextField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" textContentType="nickname"/>
                                <connections>
                                    <outlet property="delegate" destination="joZ-dK-USJ" id="4s5-Iw-Yuq"/>
                                </connections>
                            </textField>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="Ce9-cJ-hdu"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="Oh0-zd-dI9" firstAttribute="centerY" secondItem="Ce9-cJ-hdu" secondAttribute="centerY" multiplier="0.33" id="C7o-Fi-tgB"/>
                            <constraint firstAttribute="trailingMargin" secondItem="Oh0-zd-dI9" secondAttribute="trailing" id="KFZ-h7-3Eq"/>
                            <constraint firstAttribute="leadingMargin" secondItem="Oh0-zd-dI9" secondAttribute="leading" id="Ud5-jC-z30"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Works" image="checkmark.circle.fill" catalog="system" id="1h7-hX-QUw"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="epj-QP-4LV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="909" y="-185"/>
        </scene>
        <!--Tab Bar Controller-->
        <scene sceneID="jzn-lH-Gjg">
            <objects>
                <tabBarController id="OGX-6Y-L8G" sceneMemberID="viewController">
                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Ul3-hZ-CFE">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </tabBar>
                    <connections>
                        <segue destination="joZ-dK-USJ" kind="relationship" relationship="viewControllers" id="8bG-9w-dEh"/>
                        <segue destination="0Pt-Td-emn" kind="relationship" relationship="viewControllers" id="159-Mf-eq8"/>
                    </connections>
                </tabBarController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="KFp-j1-sSq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="48" y="149"/>
        </scene>
        <!--Defect-->
        <scene sceneID="36j-x5-LZO">
            <objects>
                <viewController id="0Pt-Td-emn" customClass="MyTextFieldViewController" customModule="XCTestTextFieldDemo" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="efY-Vv-hYo">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="6Qu-mq-Vzf">
                                <rect key="frame" x="20" y="64" width="374" height="170.5"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please ensure that &quot;Connect Hardware Keyboard&quot; is enabled." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BxK-e7-z3y">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="41"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9bN-kY-pWJ">
                                        <rect key="frame" x="0.0" y="51" width="374" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="UsernameTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" textContentType="email"/>
                                        <connections>
                                            <outlet property="delegate" destination="0Pt-Td-emn" id="zss-Wp-rOB"/>
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HXj-Hk-qWY">
                                        <rect key="frame" x="0.0" y="95" width="374" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="PasswordTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES" secureTextEntry="YES" textContentType="password"/>
                                        <connections>
                                            <outlet property="delegate" destination="0Pt-Td-emn" id="32R-Fp-8MA"/>
                                        </connections>
                                    </textField>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Calling `tap()` will not open the keyboard and text cannot be entered." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7TH-dj-9yJ">
                                        <rect key="frame" x="0.0" y="139" width="374" height="31.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <color key="textColor" systemColor="secondaryLabelColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                            </stackView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="rPX-Ag-RvV"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="6Qu-mq-Vzf" firstAttribute="leading" secondItem="efY-Vv-hYo" secondAttribute="leadingMargin" id="R1l-x9-E9n"/>
                            <constraint firstAttribute="trailingMargin" secondItem="6Qu-mq-Vzf" secondAttribute="trailing" id="UKp-Ml-vqO"/>
                            <constraint firstItem="6Qu-mq-Vzf" firstAttribute="top" secondItem="rPX-Ag-RvV" secondAttribute="top" constant="20" id="wkd-ig-XbA"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Defect" image="ant.circle.fill" catalog="system" id="bmW-6I-k27"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="zGX-eq-0uX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="908.69565217391312" y="482.8125"/>
        </scene>
    </scenes>
    <resources>
        <image name="ant.circle.fill" catalog="system" width="128" height="121"/>
        <image name="checkmark.circle.fill" catalog="system" width="128" height="121"/>
        <systemColor name="secondaryLabelColor">
            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
